add test coverage report before start and changed two tests for java 8